# Colibridge

./: .gitignore  README.md  middleware.py
foundry/: remappings.txt
foundry/cache/: solidity-files-cache.json
foundry/script/: Counter.s.sol
foundry/src/: ColibriLedger.sol  ColibriWrapper.sol
foundry/src/verifier/: ControlID.sol  RiscZeroGroth16Verifier.sol
foundry/test/: ColibriWrapper.t.sol  Counter.t.sol
frontend/: .env  .env.example  package-lock.json  package.json
frontend/contracts/ERC20Wrapper/: colibriERC20Wrapper.ts  erc20wrapperAbi.ts
frontend/contracts/colibriLedger/: ColibriLedger.ts  colibriLedgerAbi.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/: routes.ts
frontend/src/app/bridge/: page.tsx
frontend/src/app/ciao/: page.tsx
frontend/src/app/components/common/: DotsAnimation.tsx  Footer.tsx  Header-old.tsx  Header.tsx
frontend/src/app/create-wrapper/: page.tsx
frontend/src/config/: index.tsx
frontend/src/context/: index.tsx
risc0/: Cargo.toml  README.md
risc0/ffi/src/: main.rs
risc0/view-call/src/: config.rs
risc0/zkvm/: README.md
risc0/zkvm/colibri/: Cargo.toml
risc0/zkvm/colibri/app/: Cargo.toml
risc0/zkvm/colibri/app/src/: lib.rs
risc0/zkvm/colibri/methods/: Cargo.toml
risc0/zkvm/colibri/methods/guest/: Cargo.toml
risc0/zkvm/colibridge/: Cargo.toml
risc0/zkvm/colibridge/app/src/: lib.rs
risc0/zkvm/colibridge/host/: Cargo.toml
risc0/zkvm/colibridge/host/src/: lib.rs  main.rs
risc0/zkvm/colibridge/methods/: Cargo.toml
risc0/zkvm/colibridge/methods/guest/: Cargo.toml
(+2 files in other folders)
