[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
erc20-methods = { workspace = true }
risc0-ethereum-view-call = { path = "../../../view-call", features = ["host"] }
risc0-zkvm = { workspace = true, features = ["client"] }
tracing-subscriber = { workspace = true }
bonsai-sdk = { version = "0.7", default-features = false }